cloud image background

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://images.unsplash.com/photo-1615294127187-58dc66fe3172?ixid=MXwxMjA3fDB8MHx0b3BpYy1mZWVkfDEzNHw2c01WalRMU2tlUXx8ZW58MHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60");
+  background-image: url("clouds-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   font-family: "Open Sans Condensed", sans-serif;
